pysam/chtslib.pxd

  
  int bam_cigar2qlen(int n_cigar, uint32_t *cigar)
  int bam_cigar2rlen(int n_cigar, uint32_t *cigar)


  # Iterator interface


  # unmapped functions
  # int64_t bam_seek( bamFile fp, uint64_t voffset, int where)
  # int64_t bam_tell( bamFile fp )

  ###############################################
  # bam iterator interface
  hts_itr_t * sam_itr_queryi(hts_idx_t *idx,
                             int tid,
                             int beg,
                             int end)

  #int bam_iter_read(bamFile fp,
  #                  hts_iter_t iter,
  #                  bam1_t *b)

  ###############################################
  # stand-ins for samtools macros
  uint32_t * bam1_cigar( bam1_t * b)
  char * bam1_qname( bam1_t * b)
  uint8_t * bam1_seq( bam1_t * b)
  uint8_t * bam1_qual( bam1_t * b)
  uint8_t * bam1_aux( bam1_t * b)

  # ###############################################
  # bam_plbuf_t *bam_plbuf_init(bam_pileup_f func,
  #                             void *data)

  # int bam_fetch(bamFile fp,
  #               bam_index_t *idx,
  #               int tid,
  #               int beg,
  #               int end,
  #               void *data,
  #               bam_fetch_f func)

  # int bam_plbuf_push(bam1_t *b,
  #                    bam_plbuf_t *buf)

  # void bam_plbuf_destroy(bam_plbuf_t *buf)
  ########################################
  # pileup iterator interface
  # ctypedef struct bam_plp_t:
  #     pass

  # ctypedef bam_pileup1_t * const_bam_pileup1_t_ptr "const bam_pileup1_t *"

  # ctypedef int (*bam_plp_auto_f)(void *data, bam1_t *b)

  # bam_plp_t bam_plp_init( bam_plp_auto_f func, void *data)
  # int bam_plp_push( bam_plp_t iter,  bam1_t *b)
  # bam_pileup1_t * bam_plp_next( bam_plp_t iter, int *_tid, int *_pos, int *_n_plp)
  # bam_pileup1_t * bam_plp_auto( bam_plp_t iter, int *_tid, int *_pos, int *_n_plp)
  # void bam_plp_set_mask(bam_plp_t iter, int mask)
  # void bam_plp_reset(bam_plp_t iter)
  # void bam_plp_destroy(bam_plp_t iter)
  # void bam_plp_set_maxcnt(bam_plp_t iter, int maxcnt)

  ##################################################
  ## SAM file definitions

  bam_hdr_t *sam_hdr_parse(int l_text,
                           char *text)

  bam_hdr_t *sam_hdr_read(htsFile *fp)

  int sam_hdr_write(htsFile *fp,
                    bam_hdr_t *h)

  # int sam_parse1(kstring_t *s, bam_hdr_t *h, bam1_t *b)

  # int sam_format1(bam_hdr_t *h,
  #                 bam1_t *b,
  #                 kstring_t *str)
  # Read from BAM, CRAM or SAM files
  int sam_read1(htsFile *fp,
                bam_hdr_t *h,
                bam1_t *b)

  # Read from BAM, CRAM or SAM files
  int sam_write1(htsFile *fp,
                 bam_hdr_t *h,
                 bam1_t *b)

  # functions for dealing with the auxillary string
  uint8_t *bam_aux_get(bam1_t *b, char tag[2])
  int32_t bam_aux2i(uint8_t *s)
  float bam_aux2f(uint8_t *s)
  char bam_aux2A( uint8_t *s)
  char *bam_aux2Z( uint8_t *s)

  void bam_aux_append(bam1_t *b,
                      char tag[2],
                      char type,
                      int len,
                      uint8_t *data)

  int bam_aux_del(bam1_t *b, uint8_t *s)

  int32_t bam_endpos(bam1_t *b)

cdef extern from *:
    ctypedef char* const_char_ptr "const char*"




#   ctypedef struct samfile_t_un:
#     tamFile tamr
#     bamFile bam
#     FILE *tamw
    
#   ctypedef struct samfile_t:
#      int type
#      samfile_t_un x
#      bam_hdr_t *header

#   samfile_t *samopen( const_char_ptr fn, char * mode, void *aux)

#   int sampileup( samfile_t *fp, int mask, bam_pileup_f func, void *data)

#   void samclose(samfile_t *fp)

#   int samread(samfile_t *fp, bam1_t *b)

#   int samwrite(samfile_t *fp, bam1_t *b)

#   # functions not declared in sam.h but available as extern
#   int bam_prob_realn(bam1_t *b, char *ref)
#   int bam_cap_mapQ(bam1_t *b, char *ref, int thres)

cdef extern from "faidx.h":

   ctypedef struct faidx_t:
      pass

   int fai_build(char *fn)

   void fai_destroy(faidx_t *fai)

   faidx_t *fai_load(char *fn)

   char *fai_fetch(faidx_t *fai,
                   char *reg,
                   int *len)

   int faidx_fetch_nseq(faidx_t *fai)

   char *faidx_fetch_seq(faidx_t *fai,
                         char *c_name, 
                         int p_beg_i,
                         int p_end_i,
                         int *len)


cdef extern from "htslib_util.h":

    int pysam_pileup_next(bam1_t *b, 
                          bam_plbuf_t *buf, 
                          bam_pileup1_t ** plp,
                          int * tid,
                          int * pos,
                          int * n_plp )


    # stand-in functions for samtools macros
    void pysam_bam_destroy1( bam1_t * b) 

    # add *nbytes* into the variable length data of *src* at *pos*
    bam1_t * pysam_bam_update( bam1_t * b, 
                               size_t nbytes_old,
                               size_t nbytes_new,
                               uint8_t * pos )

    # FILE * pysam_set_stderr(int fd)
    # void pysam_unset_stderr()

    # return mapped/unmapped reads on tid
    uint32_t pysam_get_mapped(hts_idx_t *idx, int tid)
    uint32_t pysam_get_unmapped(hts_idx_t *idx, int tid)

    # now: static
    int aux_type2size(int)

    char * pysam_bam_get_qname(bam1_t * b)
    uint32_t * pysam_bam_get_cigar(bam1_t * b)
    uint8_t * pysam_bam_get_seq(bam1_t * b)
    uint8_t * pysam_bam_get_qual(bam1_t * b)
    uint8_t * pysam_bam_get_aux(bam1_t * b)
    int pysam_bam_get_l_aux(bam1_t * b)
    char pysam_bam_seqi(uint8_t * s, int i)

    uint16_t pysam_get_bin(bam1_t * b)
    uint8_t pysam_get_qual(bam1_t * b)
    uint8_t pysam_get_l_qname(bam1_t * b)
    uint16_t pysam_get_flag(bam1_t * b)
    uint16_t pysam_get_n_cigar(bam1_t * b)
    void pysam_set_bin(bam1_t * b, uint16_t v)
    void pysam_set_qual(bam1_t * b, uint8_t v)
    void pysam_set_l_qname(bam1_t * b, uint8_t v)
    void pysam_set_flag(bam1_t * b, uint8_t v)
    void pysam_set_n_cigar(bam1_t * b, uint16_t v)
    void pysam_update_flag(bam1_t * b, uint16_t v, uint16_t flag)

####################################################################
# Utility types

# ctypedef struct __iterdata:
#     samfile_t * samfile
#     hts_itr_t iter
#     faidx_t * fastafile
#     int tid
#     char * seq
#     int seq_len



####################################################################
#
# Exposing pysam extension classes
#
# Note: need to declare all C fields and methods here
#
cdef class Fastafile:
    cdef object _filename, _references, _lengths, reference2length
    cdef faidx_t* fastafile
    cdef char* _fetch(self, char* reference, int start, int end, int* length)

cdef class FastqProxy:
    cdef kseq_t * _delegate

cdef class Fastqfile:
    cdef object _filename
    cdef gzFile fastqfile
    cdef kseq_t * entry 

    cdef kseq_t * getCurrent( self )
    cdef int cnext(self)

cdef class AlignedRead:

    # object that this AlignedRead represents
    cdef bam1_t * _delegate

    # add an alignment tag with value to the AlignedRead 
    # an existing tag of the same name will be replaced.
    cpdef setTag( self, tag, value, value_type = ?, replace = ? )

cdef class Samfile:

    cdef object _filename
    # pointer to htsFile structure
    cdef htsFile * samfile

    # pointer to compressed file
    cdef BGZF * fp

    # pointer to index
    cdef hts_idx_t *index
    # header structure
    cdef bam_hdr_t * header
    # true if file is a bam file
    cdef int isbam
    # true if not a file but a stream
    cdef int isstream
    # true if file is not on the local filesystem
    cdef int isremote
    # current read within iteration
    cdef bam1_t * b
    # file opening mode
    cdef char * mode

    # beginning of read section
    cdef int64_t start_offset 

    cdef bam_hdr_t * _buildHeader(self, new_header)
    cdef bam1_t * getCurrent(self)
    cdef int cnext(self)

    # write an aligned read
    cpdef int write(self, AlignedRead read)

    cdef char * _getrname(self, int tid)

cdef class PileupProxy:
    cdef bam_pileup1_t ** plp
    cdef int tid
    cdef int pos
    cdef int n_pu

cdef class PileupRead:
    cdef AlignedRead _alignment
    cdef int32_t  _qpos
    cdef int _indel
    cdef int _level
    cdef uint32_t _is_del
    cdef uint32_t _is_head
    cdef uint32_t _is_tail

cdef class IteratorRow:
    pass

cdef class IteratorRowRegion(IteratorRow):
    cdef hts_itr_t * iter
    cdef bam1_t * b
    cdef int retval
    cdef Samfile samfile
    cdef htsFile * fp
    # true if samfile belongs to this object
    cdef int owns_samfile

    cdef bam1_t * getCurrent( self )

    cdef int cnext(self)

cdef class IteratorRowHead(IteratorRow):
    cdef bam1_t *               b
    cdef int                    retval
    cdef Samfile samfile
    cdef htsFile              * fp
    # true if samfile belongs to this object
    cdef int owns_samfile
    cdef int max_rows
    cdef int current_row

    cdef bam1_t * getCurrent(self)
    cdef int cnext(self)

cdef class IteratorRowAll(IteratorRow):
    cdef bam1_t * b
    cdef htsFile * fp
    cdef Samfile samfile
    cdef int owns_samfile
    cdef bam1_t * getCurrent( self )
    cdef int cnext(self)

cdef class IteratorRowAllRefs(IteratorRow):
    cdef Samfile samfile
    cdef int         tid
    cdef IteratorRowRegion rowiter

cdef class IteratorRowSelection(IteratorRow):
    cdef Samfile samfile
    cdef bam1_t * b
    cdef int current_pos
    cdef htsFile * fp
    cdef positions
    # true if samfile belongs to this object
    cdef int owns_samfile

    cdef bam1_t * getCurrent( self )

    cdef int cnext(self)

# cdef class IteratorColumn:

#     # result of the last plbuf_push
#     cdef IteratorRowRegion iter
#     cdef int tid
#     cdef int pos
#     cdef int n_plp
#     cdef int mask
#     cdef const_bam_pileup1_t_ptr plp
#     cdef bam_plp_t pileup_iter
#     cdef __iterdata iterdata
#     cdef Samfile samfile
#     cdef Fastafile fastafile
#     cdef stepper
#     cdef int max_depth

#     cdef int cnext(self)
#     cdef char * getSequence( self )
#     cdef setMask( self, mask )
#     cdef setupIteratorData( self,
#                             int tid,
#                             int start,
#                             int end,
#                             int reopen = ? )

#     cdef reset( self, tid, start, end )

# cdef class IteratorColumnRegion(IteratorColumn):
#     cdef int start
#     cdef int end
#     cdef int truncate

# cdef class IteratorColumnAllRefs(IteratorColumn):
#     pass

cdef class IndexedReads:
    cdef Samfile samfile
    cdef htsFile * fp
    cdef index
    # true if samfile belongs to this object
    cdef int owns_samfile


